--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "node test.js",
     "test2": "node mouse.js",
     "test3": "node test2.js",
-    "test4": "node test3.js"
+    "test4": "node test3.js",
+    "test5": "mouseandcode.js"
   },
   "repository": {
     "type": "git",
